# chess-detection

./: .gitignore  README.md  app.py  poster_48x36.pptx  pyproject.toml
config/: board_detection.yaml  piece_detection.yaml  training.yaml
data/: data.yaml
data/test/labels/: 00bc0cacffdebe6b11bdeec56f63ee49_jpg.rf.6b907218039af58b824fc6937f3e70ab.txt  0301b7f9ed4d5ba503fda79fc4370c29_jpg.rf.4a58f4017559bbfa59a9d1a94775c281.txt  040f2bcba5afce3afafdd5bbf36d2ca5_jpg.rf.ec2442a1a3fc70d6710e428fb1d67e0d.txt  05de676d5078dc0a13796f3f627993ef_jpg.rf.c578456a7cc9ab5abc4c4b56224a783f.txt  26fa37995fa5b18ec40e0a94e6d91104_jpg.rf.047eeca1feaa26e4a418d996d29c12ae.txt  302e7c10664be32b4fc000452149027c_jpg.rf.719f2baebcc856e3e457932ef0dea768.txt  3796db002cba7265bd32b0161ddd9127_jpg.rf.ae0c1dbad08dba64625f10771e6dd88e.txt  38f26ee82e38d332b2a831aa47bd363b_jpg.rf.df6f0eee6c8a257c70b6308256573846.txt  49c2afbbe5726160b289f7c0c62cdace_jpg.rf.39cdb9efff28b239287c033c300a4eee.txt  5825608dccde6544eef91822136079d0_jpg.rf.48546d22915b13296f8426188d3f9745.txt  5a35ba2ec3e0d0b2b12b1758a8ac29aa_jpg.rf.c01cc4ddac729458c495a683136608e9.txt  5cecd3b3946aac5c713a51e0bd4617c9_jpg.rf.38afa9b826b248bbf9bde0ab9145f330.txt  6589f4cfb37439d7d276f0d70f7ee1f0_jpg.rf.11ac0def4ec82af182eaccf91069489b.txt  (+23 more)
data/valid/: labels.cache
models/CNN-chessboard/: xcorner_dnn_best (1).pt  xcorner_dnn_best.pt
scripts/: detect.py  evaluate_board.py  evaluate_pieces.py  run_single.py  train_board_dnn.py  train_piece_yolo.py
src/chess_detection/: __init__.py  pipeline.py
templates/: index.html
(+353 files in other folders)
